force-app/main/default/objects/Contact/fields/eyecolor__c.field-meta.xml
<CustomField>
    <fullName>eyecolor__c</fullName>
    <description>Color de ojos</description>
    <label>eyecolor</label>
    <length>50</length>
    <type>Text</type>
</CustomField>