force-app/main/default/objects/Contact/fields/gender__c.field-meta.xml
<CustomField>
    <fullName>gender__c</fullName>
    <description>Genero del personaje</description>
    <inlineHelpText>Genero del personaje</inlineHelpText>
    <label>gender</label>
    <length>50</length>
    <type>Text</type>
</CustomField>