force-app/main/default/objects/Contact/fields/haircolor__c.field-meta.xml
<CustomField>
    <fullName>haircolor__c</fullName>
    <description>Color de cabello</description>
    <inlineHelpText>Color de cabello</inlineHelpText>
    <label>haircolor</label>
    <length>50</length>
    <type>Text</type>
</CustomField>