force-app/main/default/objects/Contact/fields/height__c.field-meta.xml
<CustomField>
    <fullName>height__c</fullName>
    <description>Altura del personaje</description>
    <inlineHelpText>Altura del personaje</inlineHelpText>
    <label>height</label>
    <length>50</length>
    <type>Text</type>
</CustomField>