force-app/main/default/objects/Contact/fields/homeworld__c.field-meta.xml
<CustomField>
    <fullName>homeworld__c</fullName>
    <description>Planeta del personaje</description>
    <inlineHelpText>Planeta del personaje</inlineHelpText>
    <label>homeworld</label>
    <length>50</length>
    <type>Text</type>
</CustomField>