force-app/main/default/objects/Contact/fields/idcharacter__c.field-meta.xml
<CustomField>
    <fullName>idcharacter__c</fullName>
    <description>Id del personaje</description>
    <externalId>true</externalId>
    <inlineHelpText>Id del personaje</inlineHelpText>
    <label>idcharacter</label>
    <length>100</length>
    <type>Text</type>
</CustomField>