force-app/main/default/objects/Contact/fields/Name__c.field-meta.xml
<CustomField>
    <fullName>Name__c</fullName>
    <description>Nombre del Personaje</description>
    <inlineHelpText>Nombre del Personaje</inlineHelpText>
    <label>Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>