force-app/main/default/objects/Contact/fields/Obra_Social__c.field-meta.xml
<CustomField>
    <fullName>Obra_Social__c</fullName>
    <label>Obra Social</label>
    <length>100</length>
    <type>Text</type>
</CustomField>