force-app/main/default/objects/Contact/fields/url__c.field-meta.xml
<CustomField>
    <fullName>url__c</fullName>
    <description>Url del personaje</description>
    <inlineHelpText>Url del personaje</inlineHelpText>
    <label>url</label>
    <length>100</length>
    <type>Text</type>
</CustomField>